--- a/styles/collection2.css
+++ b/styles/collection2.css
@@ -8,7 +8,7 @@ body {
 
 main menu h1  {
     text-align: center;
-    margin-bottom: 20px;
+/*    margin-bottom: 20px;*/
     font-family: Aleo, 'Times New Roman', Times, serif;
     font-weight: 400;
     font-size: 30px;
@@ -20,8 +20,7 @@ main menu h1  {
 
 main menu {
     background-color: rgba(0, 0, 0, .4);
-    height: 143px
-    
+    height: 105px;
 }
 
 #plants li a h3:hover {
