--- a/styles/collection3.css
+++ b/styles/collection3.css
@@ -58,7 +58,7 @@ body {
     color: #ab0c2f;
 }
 
-#collection1 {
+#collection3 {
     color: #ab0c2f;
 }
 
